--- a/4-tabs/index.html
+++ b/4-tabs/index.html
@@ -31,6 +31,12 @@
         padding: 1.6rem 2rem;
         transition: all 0.2s;
         cursor: pointer;
+        position: relative;
+      }
+
+      .tab:hover,
+      .tab.active {
+        color: rgb(0, 82, 235, 0.8);
       }
 
       .tabs {
@@ -42,11 +48,23 @@
         gap: 2px;
       }
 
-      .tab:hover,
-      .tab.active {
-        color: rgb(0, 82, 235, 0.8);
-        box-shadow: inset 0 -2px rgb(0, 82, 235, 0.8);
+      .tab::after {
+        content: "";
+        position: absolute;
+        bottom: -1px;
+        left: 0;
+        height: 2px;
+        width: 100%;
+        background-color: rgb(0, 82, 235, 0.8);
+        opacity: 0;
+        transition: opacity 0.2s;
       }
+
+      .tab:hover::after,
+      .tab.active::after {
+        opacity: 1;
+      }
+
       .tab-heading {
         font-size: inherit;
         font-weight: 600;
