--- a/6-mobile-navbar/index.html
+++ b/6-mobile-navbar/index.html
@@ -118,10 +118,10 @@
           font-size: 50%;
         }
 
-        .btn-nav-mobile:hover {
+        /* .btn-nav-mobile:hover {
           outline: none;
           box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
-        }
+        } */
 
         .btn-nav-mobile:focus {
           outline: none;
@@ -156,10 +156,10 @@
           box-shadow: none;
         }
 
-        .nav-open .btn-nav-mobile:focus {
+        /* .nav-open .btn-nav-mobile:focus {
           outline: none;
           box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
-        }
+        } */
         .nav-list {
           flex-direction: column;
           gap: 4.8rem;
